Fix console counter and editor scrollbar overlayed menu

--- a/src/ae_console/css/console.css
+++ b/src/ae_console/css/console.css
@@ -318,7 +318,7 @@ table {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 2; /* above the console/editor content wrapper (for MSIE) */
+    z-index: 10; /* above the console/editor content wrapper (for MSIE) */
 }
 #consoleContentWrapper, #editorContentWrapper {
     position: absolute;
@@ -446,7 +446,7 @@ table {
     position: absolute;
     bottom: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 1;
     min-width: 1em;
     background: red;
     color: white;
